# simon

./: .gitignore  .npmignore  LICENSE  PKGBUILD  README.md  package.json  pyproject.toml  schema.sql
simon/: __init__.py  config.py
simon/cli/: __init__.py  context_cmd.py  hooks_cmd.py  main.py  record_cmd.py  retrieve_cmd.py  skill_cmd.py  worker_cmd.py
simon/context/: __init__.py  artifact_extractor.py  classifier.py  formatter.py  project_state.py  recorder.py  retriever.py  worker.py
simon/ingestion/: __init__.py  claude_code.py
simon/skills/: __init__.py  analyzer.py  generator.py  installer.py  registry.py
simon/storage/: __init__.py  db.py  jobs.py  models.py
